--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "multer": "^1.4.5-lts.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
