--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node-xlsx": "^0.23.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node ./src/server.js"
   },
   "keywords": [],
   "author": "",
