--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "multer": "^1.4.5-lts.1",
-    "node-xlsx": "^0.23.0"
+    "mysql2": "^3.9.2",
+    "node-xlsx": "^0.23.0",
+    "sequelize": "^6.37.1"
   },
   "scripts": {
     "dev": "node ./src/server.js"
