--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.2",
     "node-xlsx": "^0.23.0",
-    "sequelize": "^6.37.1"
+    "sequelize": "^6.37.1",
+    "zod": "^3.22.4"
   },
   "scripts": {
     "dev": "node ./src/server.js"
