--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "zod": "^3.22.4"
   },
   "scripts": {
-    "dev": "node ./src/server.js"
+    "start": "node ./src/server.js"
   },
   "keywords": [],
   "author": "",
