--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "zod": "^3.22.4"
   },
   "scripts": {
-    "start": "node ./src/server.js"
+    "dev": "node ./src/server.js"
   },
   "keywords": [],
   "author": "",
