--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
+    "nodemailer": "^6.9.13",
     "node-xlsx": "^0.23.0",
     "sequelize": "^6.37.1",
     "swagger-jsdoc": "^6.2.8",
@@ -20,7 +21,8 @@
     "zod": "^3.22.4"
   },
   "scripts": {
-    "start": "node ./src/server.js"
+    "start": "node ./src/server.js",
+    "dev":"nodemon ./src/server.js"
   },
   "keywords": [],
   "author": "",
