--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "zod": "^3.22.4"
   },
   "scripts": {
-    "start": "node ./src/server.js",
+    "start": "pm2 start ./src/server.js --name backend-plannexus",
     "dev":"nodemon ./src/server.js"
   },
   "keywords": [],
