--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "zod": "^3.22.4"
   },
   "scripts": {
-    "start": "pm2 start ./src/server.js --name backend-plannexus",
+    "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js"
   },
   "keywords": [],
